--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ Click==7.0
 colorama==0.4.1
 dnspython==1.16.0
 Flask==1.1.1
+flask-paginate==0.5.3
 Flask-PyMongo==2.3.0
+Flask-Scss==0.5
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.1
@@ -14,6 +16,7 @@ mysql-connector-python==8.0.16
 pylint==2.3.1
 pymongo==3.8.0
 PyMySQL==0.9.3
+pyScss==1.3.5
 six==1.12.0
 typed-ast==1.4.0
 virtualenv==16.6.1
